<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login">登录</string>
    <string name="confirm_information">请确认店铺信息无误后登录</string>
    <string name="shop_binding">店铺绑定</string>
    <string name="welcome_tip">欢迎使用出票大师</string>
    <string name="binding">绑定</string>
    <string name="input_phone">请输入店铺手机号！</string>
    <string name="input_pass">请输入密码！</string>
    <string name="binding_shop">首次使用，需要输入店主手机号码绑定店铺</string>
    <string name="phone_not_empty">手机号不能为空</string>
    <string name="error_phone">您输入的手机号有误！</string>
    <string name="shop_name">店铺名称：</string>
    <string name="owner_name">店主姓名：</string>
    <string name="owner_name1">店主姓名</string>
    <string name="please_select_login_account">请选择登录账号</string>
    <string name="init_pass">初始密码为000000，可在微彩之家——>微彩店设置——>销售员——>销售员管理页面设置登录密码。</string>
    <string name="login_not_empty">登录账号不能为空。</string>
    <string name="password_not_empty">密码不能为空。</string>
    <string name="tab1">票务</string>
    <string name="tab2">彩友</string>
    <string name="tab3">本店</string>
    <string name="unpaid">未支付</string>
    <string name="order_ticket">订单出票</string>
    <string name="billed">已出单</string>
    <string name="award">派奖</string>
    <string name="redemption">兑中奖票</string>
    <string name="refund">退款</string>
    <string name="unfinished">未完成</string>
    <string name="promotion">推广渠道</string>
    <string name="parameter_settings">参数设置</string>
    <string name="product_information">产品信息</string>
    <string name="sign_out">退出登录</string>
    <string name="lottery_priend_amount">彩友总数</string>
    <string name="advance_deposit">总预存款</string>
    <string name="run_off">流失彩友</string>
    <string name="personal_stores">我的彩店</string>
    <string name="phone_number">手机号码</string>
    <string name="store_name">彩店名称</string>
    <string name="store_address">彩店地址</string>
    <string name="store_picture">彩店图片</string>
    <string name="store_description">彩店描述</string>
    <string name="version_check">版本检查</string>
    <string name="about_us">关于我们</string>
    <string name="beep_setting">提示音设置</string>
    <string name="pending_payment_program">待收款方案</string>
    <string name="waiting_for_ticket_order">待出票订单</string>
    <string name="other">其他</string>

</resources>