<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:cp="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.lottchina.baselib.widget.CpItemView
        android:id="@+id/cv_unpaid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        cp:left_img_drawable="@drawable/ic_settlement_bill"
        cp:cp_text="@string/unpaid"
        cp:cp_text_tips="0 张"
        cp:show_border_top="true"
        cp:show_view_top="true"
        />
    <com.lottchina.baselib.widget.CpItemView
        android:id="@+id/cv_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        cp:left_img_drawable="@drawable/piao_1"
        cp:cp_text="@string/order_ticket"
        cp:cp_text_tips="0 张"
        />
    <com.lottchina.baselib.widget.CpItemView
        android:id="@+id/cv_billed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        cp:left_img_drawable="@drawable/ic_take_photo"
        cp:cp_text="@string/billed"
        cp:cp_text_tips="0 张"
        />
    <com.lottchina.baselib.widget.CpItemView
        android:id="@+id/cv_award"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        cp:left_img_drawable="@drawable/piao"
        cp:cp_text="@string/award"
        cp:cp_text_tips="0 张"
        cp:show_border_top="true"
        cp:show_view_top="true"
        />
    <com.lottchina.baselib.widget.CpItemView
        android:id="@+id/cv_redemption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        cp:left_img_drawable="@drawable/ic_piao"
        cp:cp_text="@string/redemption"
        cp:cp_text_tips="0 张"
        />
    <com.lottchina.baselib.widget.CpItemView
        android:id="@+id/cv_refund"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        cp:left_img_drawable="@drawable/ic_refund"
        cp:cp_text="@string/refund"
        cp:cp_text_tips="0 张"
        cp:show_border_top="true"
        cp:show_view_top="true"
        />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_avatar_default"
        android:visibility="gone"
        />
</LinearLayout>