<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lottchina.xdbao.ui.login.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_top_height"
        android:background="@mipmap/ic_login_top"
        >

        <android.support.constraint.Guideline
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="@dimen/login_guideline_margintop"
            android:orientation="horizontal"
            />

        <TextView
            android:id="@+id/tv1"
            style="@style/loginTv1"
            android:text="@string/shop_binding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/line1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_small"
            android:textColor="@color/white"
            android:text="@string/welcome_tip"
            app:layout_constraintLeft_toRightOf="@+id/tv1"
            app:layout_constraintBottom_toBottomOf="@+id/tv1"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="2dp"

            />

        <View
            style="@style/loginWhiteBlock"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv1"
            />

    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/binding_shop"
                android:textColor="@color/txtGrey"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_default"
                />

            <com.lottchina.baselib.widget.ClearEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/input_phone"
                android:textSize="15sp"
                android:background="@drawable/bg_input_selector"
                android:drawableLeft="@mipmap/ic_phone"
                android:drawablePadding="8dp"
                android:paddingBottom="10dp"
                android:inputType="phone"
                android:layout_marginTop="80dp"
                android:textCursorDrawable="@null"
                />


            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/binding"
                android:textSize="@dimen/txt_large"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/btn_login"
                android:layout_marginTop="100dp"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
