<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.lottchina.xdbao.ui.login.LoginActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_top_height"
            android:background="@mipmap/ic_login_top">

            <android.support.constraint.Guideline
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/login_guideline_margintop" />

            <TextView
                android:id="@+id/tv1"
                style="@style/loginTv1"
                android:text="@string/login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/line1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="2dp"
                android:text="@string/confirm_information"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_small"
                app:layout_constraintBottom_toBottomOf="@+id/tv1"
                app:layout_constraintLeft_toRightOf="@+id/tv1" />

            <View
                style="@style/loginWhiteBlock"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv1" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:orientation="horizontal">

                <TextView
                    style="@style/txtSmallGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_name" />

                <TextView
                    android:id="@+id/tv_shop_name"
                    style="@style/txtSmallBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:orientation="horizontal"
                >

                <TextView
                    style="@style/txtSmallGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owner_name" />

                <TextView
                    android:id="@+id/tv_owner_name"
                    style="@style/txtSmallBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--" />

            </LinearLayout>

            <FrameLayout
                style="@style/llytLogin"
                android:clickable="true"
                android:layout_marginTop="24dp">
                <LinearLayout
                    style="@style/llytLogin"
                    >

                    <com.lottchina.baselib.widget.ClearEditText
                        android:id="@+id/cedt_selected"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/please_select_login_account"
                        android:drawableLeft="@mipmap/ic_cpj"
                        android:enabled="false"
                        android:clickable="true"
                        style="@style/edtLogin" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_lower_triangle"
                        android:layout_marginRight="8dp"
                        android:visibility="visible"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llyt_selected"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    ></LinearLayout>
            </FrameLayout>

            <LinearLayout style="@style/llytLogin"
                android:layout_marginTop="28dp"
                >
                <com.lottchina.baselib.widget.ClearEditText
                    android:id="@+id/cedt_password"
                    android:drawableLeft="@mipmap/ic_phone"
                    android:hint="@string/input_pass"
                    android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:inputType="textPassword"
                    style="@style/edtLogin"
                    android:maxLength="16"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/init_pass"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/txt_smaller"
                android:textColor="@color/txtGrey"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/btnBlue"
            android:text="@string/login"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="40dp"
            />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
