<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="#808080"
        android:orientation="horizontal"
        >
        <LinearLayout
            style="@style/llytLotteryTop"
            >
            <TextView
                style="@style/tvLotteryTop"
                android:text="@string/lottery_priend_amount"
                android:layout_marginBottom="@dimen/tv_lottery_top"
                />
            <TextView
                android:id="@+id/tv_lottery_priend_amount"
                style="@style/tvLotteryTop"
                android:text="1 人"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/llytLotteryTop"
            >
            <TextView
                style="@style/tvLotteryTop"
                android:text="@string/advance_deposit"
                android:layout_marginBottom="@dimen/tv_lottery_top"
                />
            <TextView
                android:id="@+id/tv_advance_deposit"
                style="@style/tvLotteryTop"
                android:text="0.00 元"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/llytLotteryTop"
            >
            <TextView
                style="@style/tvLotteryTop"
                android:text="@string/run_off"
                android:layout_marginBottom="@dimen/tv_lottery_top"
                />
            <TextView
                android:id="@+id/tv_run_off"
                style="@style/tvLotteryTop"
                android:text="1 人"
                />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llyt_drop"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        ></LinearLayout>

    <LinearLayout
        android:id="@+id/llyt_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        ></LinearLayout>

</LinearLayout>