<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cp="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/llyt_store_info"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_layout_selector"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/item_margin_top"
            >

            <ImageView
                android:id="@+id/img_store_logo"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:src="@mipmap/mendianlogo"
                android:scaleType="centerCrop"
                android:layout_marginLeft="@dimen/cp_img_margin"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/cp_tv_margin"
                >

                <TextView
                    android:id="@+id/tv_store_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txt_large"
                    tools:text="店铺名称"
                    android:text="--"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/txtGrey"
                        tools:text="名称"
                        />

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/txtGrey"
                        tools:text="1111111"
                        />


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unfinished"
                android:textColor="@color/txtGrey"
                android:layout_marginRight="@dimen/cp_tv_marginRight"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrows_right"
                android:layout_marginRight="@dimen/cp_img_marginRight"
                />

        </LinearLayout>

        <com.lottchina.baselib.widget.CpItemView
            android:id="@+id/cv_promotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            cp:left_img_drawable="@drawable/tuiguangqudao"
            cp:cp_text="@string/promotion"
            cp:show_border_top="true"
            cp:show_view_top="true"
            />

        <com.lottchina.baselib.widget.CpItemView
            android:id="@+id/cv_parameter_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            cp:left_img_drawable="@drawable/m_setting"
            cp:cp_text="@string/parameter_settings"
            cp:show_border_top="true"
            cp:show_view_top="true"
            />

        <com.lottchina.baselib.widget.CpItemView
            android:id="@+id/cv_product_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            cp:left_img_drawable="@drawable/ic_info"
            cp:cp_text="@string/product_information"
            cp:show_border_top="true"
            cp:show_view_top="true"
            />


        <TextView
            android:id="@+id/tv_sign_out"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:gravity="center"
            android:textSize="@dimen/txt_large"
            android:text="@string/sign_out"
            android:background="@drawable/bg_layout_selector"
            android:layout_marginTop="@dimen/item_margin_top"
            />



    </LinearLayout>


</android.support.v4.widget.NestedScrollView>